<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>at.jku.isse.designspace.passiveprocessengine</groupId>
	<artifactId>c4s.passiveprocessengine.v3</artifactId>
	<version>2.0.0-SNAPSHOT</version>

	<distributionManagement>
		<repository>
			<id>JKU.ISSE.MAVEN</id>
             <url>https://isse.jku.at/reposilite/snapshots</url>
		</repository>
	</distributionManagement>

	<properties>
		<lombok.version>1.18.30</lombok.version>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
		<logback.version>1.2.10</logback.version>
	</properties>

	<repositories>
		<!-- The order of definitions matters. Explicitly defining central here 
			to make sure it has the highest priority. -->
		<!-- Main Maven repository -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!-- own ones -->
		<repository>
			<id>JKU.ISSE.MAVEN</id>
             <url>https://isse.jku.at/reposilite/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
      <!--  <dependency>
            <groupId>at.jku.isse.designspace</groupId>
            <artifactId>artifact-connector.core</artifactId>
            <version>3.0.0</version>
            <scope>compile</scope>
        </dependency>-->

<!--        <dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<type>pom</type>
			<version>5.1.0</version>
		</dependency>-->
        <dependency>
  			<groupId>at.jku.isse</groupId>
  			<artifactId>artifacteventstreaming</artifactId>
  			<version>0.0.5-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>


		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<!-- Statemachine -->
		<dependency>
			<groupId>com.github.stateless4j</groupId>
			<artifactId>stateless4j</artifactId>
			<version>2.6.0</version>
		</dependency>

		<!-- JSON -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>7.2</version>
		</dependency>

		<!-- Test suite -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>3.2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>


</project>